welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: ';' expected but '(' found.
  var T:Array[Int](num)
                  ^golomb:6: error: ')' expected but '}' found.
}
^